# backend

./: .gitignore  .pre-commit-config.yaml  app.py  cdk.context.json  certificate_stack.py  dns_stack.py  env.json  infrastructure_stack.py  login_stack.py  organization_stack.py  rds_stack.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
microservices/authorization/: Dockerfile_validate_authorization  conftest.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  template.yaml
microservices/authorization/authorization_service/: app.py  store_nonce.py
microservices/authorization/create_authorization/: app.py  create.py
microservices/authorization/delete_authorization/: app.py  delete.py
microservices/authorization/edit_authorization/: app.py  edit.py  requirements.txt
microservices/authorization/get_authorizations/: app.py  authorization_filter.py  get.py
microservices/authorization/lib/: libboundparam.so.2.0.0  libgnutls.so.26.22.6  libgnutlsxx.so.26.14.12  libltdl.so.7.3.0  libmimerS.so.2  libodbc.so.2.0.0  libodbcdrvcfg2S.so.2  libodbcinst.so.2.0.0  libodbcnnS.so.2.0.0  liboraodbcS.so.2  libsodium.so.18  libtdsS.so.2.0.0
microservices/authorization/models/: api_response.py  authorization.py  devices.py  wallet.py
microservices/authorization/onboarding/: app.py
microservices/authorization/src/: Docker_validate_authorization
microservices/authorization/tests/: test_authorization_service.py  test_create_authorization.py  test_delete_authorization.py  test_edit_authorization.py  test_get_authorizations.py  test_validate_authorization.py
microservices/authorization/validate_authorization/: app.py  authorization.py  database.py  device.py  requirements.txt
microservices/device/: .coveragerc  Makefile  conftest.py  environment.json  local-env-vars.json  pyproject.toml  requirements-dev.txt  setup.cfg  template.yaml
microservices/device/create_device/: app.py  create.py  crypt.py  requirements.txt
microservices/device/create_device_group/: app.py  create.py
microservices/device/delete_device/: requirements.txt
microservices/device/edit_device/: app.py  edit.py  requirements.txt
microservices/device/edit_device_group/: app.py  edit.py
microservices/device/get_device_groups/: get.py
microservices/device/get_devices/: app.py  get.py
microservices/device/models/: api_response.py  devices.py
microservices/device/tests/: test_create.py  test_create_device.py  test_create_device_group.py  test_delete_device.py  test_edit_device.py  test_get_device.py  test_handler.py
microservices/organization/: Makefile  README.md  conftest.py  database.py  environment.json  pyproject.toml  requirements.txt  template.yaml
microservices/organization/create_organization/: app.py  create.py  requirements.txt
microservices/organization/delete_organization/: app.py  delete.py
microservices/user/: README.md  conftest.py  database.py  environment.json  local-env-vars.json  pyproject.toml  template.yaml
(+183 files in other folders)
