[tool.poetry]
name = "organization"
version = "0.1.0"
description = ""
authors = ["rtrive <riccardo.trivellato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.57"
SQLAlchemy = "^1.4.11"
psycopg2-binary = "^2.8.6"
pydantic = "^1.8.1"
SQLAlchemy-Paginator = "^0.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
coverage = "*"
mypy = "*"
pytest = "*"
moto = "*"
aws_lambda_powertools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
