[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["rtrive <riccardo.trivellato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.11"
pydantic = "^1.8.1"
psycopg2-binary = "^2.8.6"
boto3 = "^1.17.57"
aws-lambda-powertools = "^1.14.0"
SQLAlchemy-Paginator = "^0.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
coverage = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
